--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-scipy~=1.4.0
-plotly~=4.8.1
-numpy~=1.16.2
-pandas~=0.25.1
+joblib==1.0.1
+numpy==1.16.6
+pandas==0.25.3
 pkg-resources==0.0.0
-pyparsing~=2.4.2
-python-dateutil~=2.7.3
-pytz~=2018.9
-
-
+plotly==4.8.2
+pyparsing==2.4.7
+python-dateutil==2.7.5
+pytz==2018.9
+retrying==1.3.3
+scikit-learn==0.24.2
+scipy==1.4.1
+six==1.16.0
+threadpoolctl==2.1.0
