--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ attrs==21.2.0
 coverage==5.5
 iniconfig==1.1.1
 joblib==1.0.1
-numpy>=1.16.6
+numpy==1.20.3
 packaging==20.9
-pandas>=0.25.3
+pandas==1.2.4
 plotly==4.8.2
 pluggy==0.13.1
 py==1.10.0
@@ -15,7 +15,7 @@ python-dateutil==2.7.5
 pytz==2018.9
 retrying==1.3.3
 scikit-learn==0.24.2
-scipy>==1.4.1
+scipy==1.6.3
 six==1.16.0
 threadpoolctl==2.1.0
 toml==0.10.2
